# CPP

./: CMakeLists.txt  main.cpp
Learning/: CustomArray.h  SmartPointer.h
matrices/: MatrixTest.cpp
trees/: NodeDynamic.cpp  NodeDynamic.h  NodeStatic.cpp  NodeStatic.h
